add player/mod faction support